[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.78"
clap = { version = "4.4.12", features = ["derive"] }
core_affinity = { version = "0.8.1", optional = true }
qwerk = { path = "../qwerk" }
rand = { version = "0.8.5", features = [
	"std",
	"small_rng",
], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[features]
jemalloc = ["tikv-jemallocator"]
affinity = ["core_affinity"]
