[package]
name = "qwerk"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.9"
crossbeam-queue = "0.3.9"
crossbeam-utils = "0.8.17"
parking_lot = "0.12.1"
scc = "2.0.6"
static_assertions = "1.1.0"
thiserror = "1.0.51"

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }

[lints.clippy]
nursery = "warn"
missing_const_for_fn = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }

pedantic = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
