[package]
name = "qwerk"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.11"
crossbeam-queue = "0.3.11"
crossbeam-utils = "0.8.19"
parking_lot = "0.12.1"
scc = "2.0.9"
static_assertions = "1.1.0"
thiserror = "1.0.56"

[target.'cfg(unix)'.dependencies]
libc = "0.2.152"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
	"Win32_Foundation",
	"Win32_Storage_FileSystem",
	"Win32_System_IO",
] }

[dev-dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
tempfile = "3.9.0"

[lints.clippy]
nursery = "warn"
missing_const_for_fn = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }

pedantic = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
